<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainFragment"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <ImageView
                    android:id="@+id/image_view_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <TextView
                    android:id="@+id/text_view_display_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:layout_constraintTop_toBottomOf="@+id/image_view_avatar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="Display Name"
                    />

                <TextView
                    android:id="@+id/text_view_union_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_display_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="Union Id"
                    />

                <TextView
                    android:id="@+id/text_view_access_token"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_union_id"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="Access Token"
                    />

                <TextView
                    android:id="@+id/text_view_drive_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_access_token"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="Drive About"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/action_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <com.huawei.hms.support.hwid.ui.HuaweiIdAuthButton
                    android:id="@+id/button_sign_in_authorization_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:hwid_button_theme="hwid_button_theme_full_title"
                    app:hwid_color_policy="hwid_color_policy_red"
                    app:hwid_corner_radius="hwid_corner_radius_large"
                    />

                <Button
                    android:id="@+id/button_sign_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_sign_out"
                    app:layout_constraintTop_toBottomOf="@+id/button_sign_in_authorization_code"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <Button
                    android:id="@+id/button_cancel_authorization"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_cancel_authorization"
                    app:layout_constraintTop_toBottomOf="@+id/button_sign_out"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <Button
                    android:id="@+id/button_drive_connect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/button_drive_connect"
                    app:layout_constraintTop_toBottomOf="@+id/button_cancel_authorization"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <Button
                    android:id="@+id/button_drive_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_drive_info"
                    app:layout_constraintTop_toBottomOf="@+id/button_drive_connect"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <EditText
                    android:id="@+id/edit_text_save_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_save_content_hint"
                    app:layout_constraintTop_toBottomOf="@+id/button_drive_info"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <Button
                    android:id="@+id/button_drive_save_file"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_text_save_file"
                    app:layout_constraintTop_toBottomOf="@+id/edit_text_save_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <Button
                    android:id="@+id/button_drive_save_buffer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_text_save_buffer"
                    app:layout_constraintTop_toBottomOf="@+id/button_drive_save_file"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <Button
                    android:id="@+id/button_drive_load"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_text_load"
                    app:layout_constraintTop_toBottomOf="@+id/button_drive_save_buffer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <EditText
                    android:id="@+id/edit_text_folder_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_save_content_hint"
                    app:layout_constraintTop_toBottomOf="@+id/button_drive_load"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <Button
                    android:id="@+id/button_drive_create_folder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_text_save_file"
                    app:layout_constraintTop_toBottomOf="@+id/edit_text_folder_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/text_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_log_margin"
                android:textSize="@dimen/text_log_font_size"
                app:layout_constraintTop_toBottomOf="@+id/action_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="abcdefg"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>